--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ html, body{
 .wrapper{
     /* visibility:hidden; */
     min-height: calc(100% - 9rem);
+    margin: auto;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -31,8 +32,10 @@ html, body{
     border-radius: 5px;
 }
 
-.footer{
+footer{
+    position: absolute;
     bottom: 0;
+    left: 0;
 }
 
 .title{
@@ -55,10 +58,15 @@ html, body{
 
 .modal-content{
     background-color:rgb(45, 45, 45);
-    margin: 40% auto;
+    margin:auto auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 2em;
     border: 2px solid #fefefe;
-    width: 60%; 
+    width: 30%;
+    min-width: 520px; 
     text-align: center;
     border-radius: 5px;
     color: #fefefe;
@@ -134,7 +142,7 @@ html, body{
     background-image: url(../img/scissors-player.png);
 }
 .cpuRock{
-    background-image: url(../img/rock-cpu.png) ;
+    background-image: url(../img/rock-cpu.png);
 }
 .cpuPaper{
     background-image: url(../img/paper-cpu.png);
